rotierender-fisch/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rotierender-fisch
  namespace: rotierender-fisch
spec:
  selector:
    app: rotierender-fisch
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
