rotierender-fisch/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rotierender-fisch
  namespace: rotierender-fisch
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - rotierenderfis.ch
      secretName: fish-tls
  rules:
    - host: rotierenderfis.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rotierender-fisch
                port:
                  number: 80
